@@ -1,7 +1,7 @@
 package io.github.nihaljain;
 
-import java.io.File;
-import java.nio.file.Paths;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -16,7 +16,7 @@ public class Util {
     throw new IllegalStateException("Utility class");
   }
 
-  public static String getLogDirPath(String[] args) throws Exception {
+  public static Path getLogDirPath(String[] args) throws Exception {
     // Check if the log directory and useCanonicalPath flag are provided
     if (args.length < 2) {
       throw new IllegalArgumentException(
@@ -40,16 +40,12 @@ public class Util {
     logger.info("useCanonicalPath flag: " + useCanonicalPath);
 
     // Get the final log path for the log directory
-    String logDirPath = useCanonicalPath ? Paths.get(logDir).toFile().getCanonicalPath() : logDir;
+    Path logDirPath = useCanonicalPath ? Path.of(logDir).toRealPath() : Path.of(logDir).toAbsolutePath();
     logger.info("Logs directory (final path): " + logDirPath);
 
     // Ensure the log directory exists, else create it
-    File logDirectory = new File(logDir);
-    if (!logDirectory.exists() || !logDirectory.isDirectory()) {
-      if (!logDirectory.mkdirs()) {
-        throw new IllegalArgumentException(
-            "Log directory does not exist and could not be created: " + logDir);
-      }
+    if (!Files.isDirectory(logDirPath)) {
+      Files.createDirectories(logDirPath);
     }
     return logDirPath;
   }
